Add JWT auth and user-scoped grocery list